kajit/tests/snapshots/corpus__generated_rvsdg_json_nested_struct_x86_64.snap
---
source: kajit/tests/corpus.rs
expression: ir_text
---
lambda @0 (shape: "Person") {
  region {
    args: [%cs, %os]
    n2 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
    n3 = Const(0x0) [] -> [v0]
    n4 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:n2, %os:n2] -> [%cs, %os]
    n5 = PeekByte [%cs:n4] -> [v1, %cs]
    n6 = Const(0x7d) [] -> [v2]
    n7 = CmpNe [v1, v2] -> [v3]
    n70 = gamma [
      pred: v3
      in0: v0
      in1: %cs:n5
      in2: %os:n4
    ] {
      branch 0:
        region {
          args: [arg0, %cs, %os]
          n8 = AdvanceCursor(1) [%cs:arg] -> [%cs]
          results: [arg0, %cs:n8, %os:arg]
        }
      branch 1:
        region {
          args: [arg0, %cs, %os]
          n134 = Const(0x0) [] -> [v8]
          n135 = Const(0x<ptr>) [] -> [v9]
          n136 = Const(0x4) [] -> [v10]
          n137 = Const(0x1) [] -> [v12]
          n138 = CmpNe [v8, v12] -> [v13]
          n139 = Const(0x<ptr>) [] -> [v20]
          n140 = Const(0x3) [] -> [v21]
          n141 = Const(0x1) [] -> [v23]
          n142 = Const(0x<ptr>) [] -> [v31]
          n143 = Const(0x7) [] -> [v32]
          n144 = Const(0x1) [] -> [v34]
          n145 = Const(0x2c) [] -> [v47]
          n69 = theta [arg0, %cs:arg, %os:arg] {
            region {
              args: [arg0, %cs, %os]
              n9 = SlotAddr(0) [] -> [v4]
              n10 = SlotAddr(1) [] -> [v5]
              n11 = CallIntrinsic(0x<ptr>, field_offset=0) [v4, v5, %cs:arg, %os:arg] -> [%cs, %os]
              n12 = ReadFromSlot(0) [%cs:n11] -> [v6, %cs]
              n13 = ReadFromSlot(1) [%cs:n12] -> [v7, %cs]
              n14 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:n13, %os:n11] -> [%cs, %os]
              n18 = CallPure(0x<ptr>) [v6, v7, v9, v10] -> [v11]
              n21 = And [v11, v13] -> [v14]
              n26 = gamma [
                pred: v14
                in0: arg0
                in1: v8
                in2: %cs:n14
                in3: %os:n14
              ] {
                branch 0:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    results: [arg0, arg1, %cs:arg, %os:arg]
                  }
                branch 1:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    n22 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
                    n23 = Const(0x1) [] -> [v15]
                    n24 = Or [arg0, v15] -> [v16]
                    n25 = Const(0x1) [] -> [v17]
                    results: [v16, v17, %cs:n22, %os:n22]
                  }
              } -> [v18, v19, %cs, %os]
              n29 = CallPure(0x<ptr>) [v6, v7, v20, v21] -> [v22]
              n31 = CmpNe [v19, v23] -> [v24]
              n32 = And [v22, v24] -> [v25]
              n37 = gamma [
                pred: v25
                in0: v18
                in1: v19
                in2: %cs:n26
                in3: %os:n26
              ] {
                branch 0:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    results: [arg0, arg1, %cs:arg, %os:arg]
                  }
                branch 1:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    n33 = CallIntrinsic(0x<ptr>, field_offset=56) [%cs:arg, %os:arg] -> [%cs, %os]
                    n34 = Const(0x2) [] -> [v26]
                    n35 = Or [arg0, v26] -> [v27]
                    n36 = Const(0x1) [] -> [v28]
                    results: [v27, v28, %cs:n33, %os:n33]
                  }
              } -> [v29, v30, %cs, %os]
              n40 = CallPure(0x<ptr>) [v6, v7, v31, v32] -> [v33]
              n42 = CmpNe [v30, v34] -> [v35]
              n43 = And [v33, v35] -> [v36]
              n53 = gamma [
                pred: v36
                in0: v29
                in1: v30
                in2: %cs:n37
                in3: %os:n37
              ] {
                branch 0:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    results: [arg0, arg1, %cs:arg, %os:arg]
                  }
                branch 1:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    n44 = SaveOutPtr [%os:arg] -> [v37, %os]
                    n45 = Const(0x18) [] -> [v38]
                    n46 = Add [v37, v38] -> [v39]
                    n47 = SetOutPtr [v39, %os:n44] -> [%os]
                    n48 = apply @1 [%cs:arg, %os:n47] -> [%cs, %os]
                    n49 = SetOutPtr [v37, %os:n48] -> [%os]
                    n50 = Const(0x4) [] -> [v40]
                    n51 = Or [arg0, v40] -> [v41]
                    n52 = Const(0x1) [] -> [v42]
                    results: [v41, v42, %cs:n48, %os:n49]
                  }
              } -> [v43, v44, %cs, %os]
              n55 = gamma [
                pred: v44
                in0: v43
                in1: %cs:n53
                in2: %os:n53
              ] {
                branch 0:
                  region {
                    args: [arg0, %cs, %os]
                    n54 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
                    results: [arg0, %cs:n54, %os:n54]
                  }
                branch 1:
                  region {
                    args: [arg0, %cs, %os]
                    results: [arg0, %cs:arg, %os:arg]
                  }
              } -> [v45, %cs, %os]
              n56 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:n55, %os:n55] -> [%cs, %os]
              n57 = BoundsCheck(1) [%cs:n56] -> [%cs]
              n58 = ReadBytes(1) [%cs:n57] -> [v46, %cs]
              n60 = CmpNe [v46, v47] -> [v48]
              n68 = gamma [
                pred: v48
                in0: v45
                in1: v46
                in2: %cs:n58
                in3: %os:n56
              ] {
                branch 0:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    n61 = Const(0x1) [] -> [v49]
                    results: [v49, arg0, %cs:arg, %os:arg]
                  }
                branch 1:
                  region {
                    args: [arg0, arg1, %cs, %os]
                    n62 = Const(0x7d) [] -> [v50]
                    n63 = CmpNe [arg1, v50] -> [v51]
                    n67 = gamma [
                      pred: v51
                      in0: arg0
                      in1: %cs:arg
                      in2: %os:arg
                    ] {
                      branch 0:
                        region {
                          args: [arg0, %cs, %os]
                          n64 = Const(0x0) [] -> [v52]
                          results: [v52, arg0, %cs:arg, %os:arg]
                        }
                      branch 1:
                        region {
                          args: [arg0, %cs, %os]
                          n65 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
                          n66 = Const(0x0) [] -> [v53]
                          results: [v53, arg0, %cs:n65, %os:n65]
                        }
                    } -> [v54, v55, %cs, %os]
                    results: [v54, v55, %cs:n67, %os:n67]
                  }
              } -> [v56, v57, %cs, %os]
              results: [v56, v57, %cs:n68, %os:n68]
            }
          } -> [v58, %cs, %os]
          results: [v58, %cs:n69, %os:n69]
        }
    } -> [v59, %cs, %os]
    n71 = Const(0x7) [] -> [v60]
    n72 = And [v59, v60] -> [v61]
    n73 = CmpNe [v61, v60] -> [v62]
    n75 = gamma [
      pred: v62
      in0: %cs:n70
      in1: %os:n70
    ] {
      branch 0:
        region {
          args: [%cs, %os]
          results: [%cs:arg, %os:arg]
        }
      branch 1:
        region {
          args: [%cs, %os]
          n74 = ErrorExit(MissingRequiredField) [%cs:arg] -> []
          results: [%cs:arg, %os:arg]
        }
    } -> [%cs, %os]
    results: [%cs:n75, %os:n75]
  }
}
