kajit/tests/snapshots/corpus__generated_rvsdg_json_transparent_composite_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 569
expression: ir_text
---
lambda @0 (shape: "StructWrapper") {
  region {
    args: [%cs, %os]
    n2 = apply @1 [%cs:arg, %os:arg] -> [%cs, %os]
    results: [%cs:n2, %os:n2]
  }
}
