kajit/tests/snapshots/corpus__generated_rvsdg_json_transparent_composite_x86_64.snap
---
source: kajit/tests/corpus.rs
expression: ir_text
---
lambda @0 (shape: "StructWrapper") {
  region {
    args: [%cs, %os]
    n2 = apply @1 [%cs:arg, %os:arg] -> [%cs, %os]
    results: [%cs:n2, %os:n2]
  }
}
