kajit/tests/snapshots/corpus__generated_rvsdg_json_transparent_string_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 569
expression: ir_text
---
lambda @0 (shape: "StringWrapper") {
  region {
    args: [%cs, %os]
    n1 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
    results: [%cs:n1, %os:n1]
  }
}
