kajit/tests/snapshots/corpus__generated_rvsdg_json_tuple_nested_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 546
expression: ir_text
---
lambda @0 (shape: "(ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¦)") {
  region {
    args: [%cs, %os]
    n6 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
    n7 = CallIntrinsic(0x<ptr>, field_offset=4) [%cs:n6, %os:n6] -> [%cs, %os]
    n3 = CallIntrinsic(0x<ptr>, field_offset=8) [%cs:n7, %os:n7] -> [%cs, %os]
    results: [%cs:n3, %os:n3]
  }
}
