kajit/tests/snapshots/corpus__generated_rvsdg_json_tuple_pair_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: ir_text
---
lambda @0 (shape: "(ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¢ÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂÃÂ¦)") {
  region {
    args: [%cs, %os]
    n1 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
    n2 = CallIntrinsic(0x<ptr>, field_offset=8) [%cs:n1, %os:n1] -> [%cs, %os]
    results: [%cs:n2, %os:n2]
  }
}
